                       User-Visible WebAuth Changes

WebAuth 4.4.3 (unreleased)

    Remove an arbitrary limit in mod_webauthldap on the number of values
    from a multivalued LDAP attribute that are put in the environment.
    Previous versions would only add the first 127 values, but there are
    some cases where one may want to see more values than that.  This
    opens the possibility of overflowing the allowed size of the
    environment, but the maximum environment size is quite large on most
    modern operating systems.

WebAuth 4.4.2 (2013-02-05)

    Fix an occasional WebKDC crash (introduced in 4.4.0) when attempting
    to determine if an authentication is interactive.

    Fix out-of-tree builds with --enable-webkdc.  Some of the logic to
    ensure the Perl modules could build when the build directory was not
    the source directory had not been tested for a while.

WebAuth 4.4.1 (2013-01-31)

    Add a new authenticate callback to the WebLogin configuration.  If
    this function is present in webkdc.conf, it will be called for every
    user visit to WebLogin and may return the user's authentication
    information or an empty list to defer to normal handling.  This can be
    used to extract authentication information from the full WebLogin
    environment; for example, it could map information about a successful
    client-side certificate authentication to an authentication identity.

    When run under FastCGI, the WebLogin scripts now use a persistent
    CGI::Application object instead of recreating it for each query.  This
    avoids reinitializing the Template Toolkit and reopening memcached
    connections for each query.

    WebLogin and the WebAuth Perl bindings are now built with
    Module::Build instead of ExtUtils::MakeMaker.  This should be
    transparent to anyone not working with the source code, but
    Module::Build and ExtUtils::CBuilder are now required to build the